--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "F:\\Python\\Python37\\python.exe",
+    "python.pythonPath": "d:\\py_virtualenv\\Scripts\\python.exe",
     "editor.tabSize": 4,
 }
